test/arrays/vass/dmapped-int-error.good
dmapped-int-error.chpl:3: error: cannot apply 'dmapped' to the non-domain type int(64)
