test/arrays/vass/dmapped-int-error.chpl
use BlockDist;
var a1: [1..3] domain(1) dmapped Block({1..2});
var a2: [1..3] int       dmapped Block({1..3});
